# loom

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md  learn-loom.ipynb
docs/rfcs/: 0001-http-tool-pre-request-hook.md  0002-credentials-and-appliers.md  0003-ssh-tool.md  0004-sse-event-shape-convergence.md  README.md
examples/tui/: pyproject.toml
examples/tui/src/loom_tui/: main.py
src/loom/: __init__.py  context.py  errors.py  home.py  loop.py  media.py  overflow.py  permissions.py  prompt.py  retry.py  runtime.py  types.py
src/loom/acp/: __init__.py  client.py  device.py  tool.py
src/loom/auth/: __init__.py  appliers.py  enforcer.py  errors.py  policies.py  policy_store.py  resolver.py
src/loom/auth/appliers/: __init__.py  _aws.py  _http.py  _jwt.py  _protocol.py  _ssh.py
src/loom/config/: __init__.py  base.py  resolver.py
src/loom/errors/: __init__.py  _builder.py  _classify.py  _extract.py  _messages.py  _patterns.py  _status.py  _types.py
src/loom/heartbeat/: __init__.py  cron.py  loader.py  manager.py  registry.py  scheduler.py  store.py  tool.py  types.py
src/loom/hitl/: __init__.py  broker.py  tool.py
src/loom/llm/: __init__.py  _convert.py  anthropic.py  base.py  openai_compat.py  redact.py  registry.py
src/loom/mcp/: __init__.py  client.py  config.py  handler.py  manager.py  server_bridge.py
src/loom/routing/: __init__.py  classifier.py  router.py
src/loom/scrape/: __init__.py  base.py  scrapling.py
src/loom/search/: __init__.py  base.py  brave.py  composite.py  ddgs.py  google.py  tavily.py
src/loom/server/: __init__.py  app.py  events.py  schemas.py
src/loom/server/routes/: __init__.py  chat.py  heartbeats.py  sessions.py  skills.py
src/loom/skills/: __init__.py  guard.py  loader.py  manager.py  registry.py  types.py
src/loom/store/: __init__.py  atomic.py  cookies.py  db.py  embeddings.py  frontmatter.py  graph.py  graphrag.py  keychain.py  memory.py  secrets.py  secrets_protocol.py  session.py  vault.py  vector.py
src/loom/store/graphrag/: __init__.py  _chunking.py  _engine.py  _extraction.py  _types.py
src/loom/store/memory/: __init__.py  _core.py  _vault_backend.py
src/loom/tools/: __init__.py  base.py  delegate.py  hitl.py  http.py  memory.py  profile.py  registry.py  scrape.py  search.py  ssh.py  ssh_session.py  subagent.py  terminal.py  utils.py  vault.py
tests/: conftest.py  test_acp.py  test_auth_appliers.py  test_auth_resolver.py  test_embeddings.py  test_entity_graph.py  test_errors_retry.py  test_graphrag.py  test_heartbeat_cron.py  test_heartbeat_loader.py  test_heartbeat_scheduler.py  test_heartbeat_store.py  test_hitl_broker.py  test_home.py  test_http_tool.py  test_jwt_applier.py  test_keychain_store.py  test_loop.py  test_loop_enhancements.py  test_mcp.py  test_media.py  test_memory_store.py  test_overflow.py  test_permissions.py  test_policy_enforcer.py  test_policy_store.py  test_prompt.py  test_redact.py  test_redact_classify.py  test_resolver_acl.py  test_resolver_with_enforcer.py  test_runtime.py  test_scrape.py  test_search.py  test_secret_store.py  test_sigv4_applier.py  test_skills.py  test_sse_events.py  test_ssh_appliers.py  test_ssh_session_tool.py  (+8 more)
