[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.2.0"
description = "A reusable agentic framework with tool calling, skills, streaming, HITL, and multi-provider support"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Loom Contributors" }]
keywords = ["agent", "llm", "ai", "framework", "tools", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
tui = ["prompt-toolkit>=3.0", "rich>=13.0", "typer>=0.12"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
